# foray-denoiser-optix

./: .gitignore  CMakeLists.txt  readme.md  setupcuda.md
cmakescripts/: findoptixsdk.cmake
src/: CMakeLists.txt  foray_cuda.hpp  foray_optix.hpp  foray_optix_cudabuffer.cpp  foray_optix_cudabuffer.hpp  foray_optix_helpers.hpp  foray_optix_scalemotionstage.cpp  foray_optix_scalemotionstage.hpp  foray_optix_stage.cpp  foray_optix_stage.hpp  scalemotion.spv.h
src/shader/: compile_to_c_header.bash  scalemotion.comp
